--- a/Klocki/app/build.gradle
+++ b/Klocki/app/build.gradle
@@ -31,4 +31,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    // https://mvnrepository.com/artifact/org.simpleframework/simple-xml
+    implementation group: 'org.simpleframework', name: 'simple-xml', version: '2.7'
 }
